apps/filebrowser/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: filebrowser
  template:
    metadata:
      labels:
        app.kubernetes.io/name: filebrowser
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: filebrowser
          image: "filebrowser/filebrowser:latest"
            # securityContext:
            #   runAsUser: 1000
            #   runAsGroup: 1000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "828Mi"
              cpu: "1000m"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: websocket
              containerPort: 3012
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /.filebrowser.json
              subPath: .filebrowser.json
            - name: database
              mountPath: /database
            - name: teresa-data
              mountPath: /srv/teresa
            - name: mark-data
              mountPath: /srv/mark
            - name: roberto-data
              mountPath: /srv/roberto
            - name: clayton-data
              mountPath: /srv/clayton
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: config
          configMap:
            name: filebrowser-config
        - name: database
          persistentVolumeClaim:
            claimName: filebrowser-database
        - name: clayton-data
          nfs:
            path: /home/clayton
            server: 192.168.1.56
        - name: mark-data
          nfs:
            path: /home/mark
            server: 192.168.1.56
        - name: teresa-data
          nfs:
            path: /home/teresa
            server: 192.168.1.56
        - name: roberto-data
          nfs:
            path: /home/roberto
            server: 192.168.1.56
