apps/filebrowser/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  - port: 3012
    targetPort: websocket
    protocol: TCP
    name: websocket
  selector:
    app.kubernetes.io/name: filebrowser


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: filebrowser
  template:
    metadata:
      labels:
        app.kubernetes.io/name: filebrowser
    spec:
      serviceAccountName: default
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: filebrowser
          image: "filebrowser/filebrowser:latest"
            # securityContext:
            #   runAsUser: 1000
            #   runAsGroup: 1000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "828Mi"
              cpu: "1000m"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: websocket
              containerPort: 3012
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /.filebrowser.json
              subPath: .filebrowser.json
            - name: database
              mountPath: /database
            - name: jasmine-data
              mountPath: /srv/jasmine
            - name: teresa-data
              mountPath: /srv/teresa
            - name: mark-data
              mountPath: /srv/mark
            - name: roberto-data
              mountPath: /srv/roberto
            - name: clayton-data
              mountPath: /srv/clayton
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: config
          configMap:
            name: filebrowser-config
        - name: database
          persistentVolumeClaim:
            claimName: filebrowser-database
        - name: clayton-data
          nfs:
            path: "${CLOUD_STORAGE_PATH}"
            server: "${NAS}"
