apps/filebrowser/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    flame.pawelmalak/icon: file-multiple
    flame.pawelmalak/name: filebrowser
    flame.pawelmalak/type: app
    flame.pawelmalak/url: https://files.${EXTERNAL_DOMAIN}
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: ${EXTERNAL_INGRESS_CLASS}
  tls:
    - hosts:
        - "files.${EXTERNAL_DOMAIN}"
      secretName: "files-tls"
  rules:
    - host: "files.${EXTERNAL_DOMAIN}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
