apps/filebrowser/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    flame.pawelmalak/icon: file-multiple
    flame.pawelmalak/name: filebrowser
    flame.pawelmalak/type: app
    flame.pawelmalak/url: https://files.claytonc.dev
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik-external
  tls:
    - hosts:
        - "files.claytonc.dev"
      secretName: "files-tls"
  rules:
    - host: "files.claytonc.dev"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
